Refactor config items and update dependencies
Removed Lombok @RequiredArgsConstructor and @Getter from Language and SingularEntry enums/classes, implementing explicit constructors and getter methods. Improved null handling and filtering in CompoundEntry. GeneralConfigItem now provides a getValue() method. BukkitConfig and BukkitSection now properly handle ItemStack, Location, and PotionEffect config items. ItemStackConfigItem supports custom model data and null-safe enchantment loading. Updated Spigot and XSeries versions, added Mojang Authlib dependency, and configured annotation processor paths for Lombok in Maven build files.